MST now displays correctly on Firefox again

--- a/public/stylesheets/common/missionStartTutorial.css
+++ b/public/stylesheets/common/missionStartTutorial.css
@@ -22,12 +22,12 @@
 
 .mission-start-tutorial-overlay {
     position: absolute;
-    /*height: 683px;*/
+    height: 683px; /* We override this when using CSS zoom. */
     width: 100%;
-    min-width: 1170px; /*  */
+    min-width: 1170px;
     background: white;
     z-index: 10;
-    display: none; /* will be later set to flex by JS after rendering */
+    display: none; /* Will be later set to flex by JS after rendering. */
     flex-shrink: 0;
     justify-content: flex-start;
     overflow: auto;
